 8. Add config page to control which stream categories are enabled, to import
    new categories, and to remove imported categories. See README for import
    file format.
 9. Use QListWidget in Qt preferences dialog, so that keyboard navigation can be
    used.
10. Add ability to 'filter search' stream categories.
11. Add option to prevent system from suspending whilst playing (Linux only).

1.1.2
-----
1. Fix build due to broken translation files.
2. After toggling various artists grouping, or group single tracks, update list
   of genres associated with artists.
3. Fix decoding of details for Online service URLs sent to MPD, and
   subsequently read back.
4. Dont allow dragging of stream categories onto playqueue.
5. Replace # in stream names with ${hash} when passing to MPD, and revert when
   URL is displayed.
6. Fix covers when using album artist for multiple artist albums, and album
   artist name is "Various Artists" - but this has been translated in Cantata.
7. Dont draw item divider in icon views.
8. For Qt4 less than 4.8.4, then use old dbus Qt type annotations.
9. Default to exporting favourites streams XML into home folder.

1.1.1
-----
 1. Fix crash in settings dialog if current connection name is removed from
    config file.
 2. Fix starting of per-user MPD instance.
 3. For Qt-only Linux builds, set file permissions of config file so that
    others cannot read the file - as MPD, Magnatune, or DigitallyImported
    passwords will be saved here.
 4. Fix reading of genres from cache file.
 5. Fix updating of genres after DB is refreshed.
 6. Dont use https for context view searches.
 7. Work-around Windows and QJson issue.
 8. Remove cantata prefix when showing status message about fetching streams.
 9. When adding streams that have a name assinged, but no path, then add a
    trailing slash.
10. Fix 'Add Stream URL' action in builds where device support is disabled.

1.1.0
-----