@@ -490,6 +490,8 @@ ControlDynamizer:
     Mode:   HTTP POST
     URL:    http://host:port/control
     Params: state={start/stop} [Required]
+            clear={1/0}        If set to '1', and statr=stop, then the MPD
+                               playqueue is also cleared.
 
 
 In order to detect whether the set of stored rules has changed, a client should
